--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-color:#F3F1F7;
+    font-family: 'Dosis', sans-serif;
+
+}
+h1 {
+    font-family: 'Homemade Apple', cursive;
+    color: rgb(3, 169, 244);
+    font-size: 24px;
+}
+p {
+    margin: 0;
+}
